Worked on parsing the JSON files in order to be exported to SQL database

--- a/Exploratory-Data-Analysis/Raw Json Exploration.ipynb
+++ b/Exploratory-Data-Analysis/Raw Json Exploration.ipynb
@@ -23,26 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0e7c57d8-df0a-4302-8900-0bb06244ff5b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3171548316.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    CREATE TABLE comprehensive_income\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "CREATE TABLE comprehensive_income "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "8369d7de-51c1-4a91-b5b4-420a31fb4307",
    "metadata": {
     "tags": []
@@ -168,7 +149,7 @@
        "2  {'income_statement': {'benefits_costs_expenses...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "1f95514f-1851-4641-836e-68d1bdc2706f",
    "metadata": {
     "tags": []
@@ -206,7 +187,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>start_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>filing_date</th>\n",
@@ -217,11 +197,22 @@
        "      <th>company_name</th>\n",
        "      <th>financials</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0001652044:2016:FY</td>\n",
+       "      <th>0001652044:2016:FY</th>\n",
        "      <td>2016-01-01</td>\n",
        "      <td>2016-12-31</td>\n",
        "      <td>2017-02-03</td>\n",
@@ -233,8 +224,7 @@
        "      <td>{'comprehensive_income': {'other_comprehensive...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0001652044:2017:FY</td>\n",
+       "      <th>0001652044:2017:FY</th>\n",
        "      <td>2017-01-01</td>\n",
        "      <td>2017-12-31</td>\n",
        "      <td>2018-02-06</td>\n",
@@ -246,8 +236,7 @@
        "      <td>{'balance_sheet': {'current_liabilities': {'va...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0001652044:2018:FY</td>\n",
+       "      <th>0001652044:2018:FY</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>2018-12-31</td>\n",
        "      <td>2019-02-05</td>\n",
@@ -259,8 +248,7 @@
        "      <td>{'income_statement': {'benefits_costs_expenses...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0001652044:2019:FY</td>\n",
+       "      <th>0001652044:2019:FY</th>\n",
        "      <td>2019-01-01</td>\n",
        "      <td>2019-12-31</td>\n",
        "      <td>2020-02-04</td>\n",
@@ -272,8 +260,7 @@
        "      <td>{'income_statement': {'participating_securitie...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0001652044:2020:FY</td>\n",
+       "      <th>0001652044:2020:FY</th>\n",
        "      <td>2020-01-01</td>\n",
        "      <td>2020-12-31</td>\n",
        "      <td>2021-02-03</td>\n",
@@ -285,8 +272,7 @@
        "      <td>{'cash_flow_statement': {'net_cash_flow_from_o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0001652044:2021:FY</td>\n",
+       "      <th>0001652044:2021:FY</th>\n",
        "      <td>2021-01-01</td>\n",
        "      <td>2021-12-31</td>\n",
        "      <td>2022-02-02</td>\n",
@@ -302,67 +288,226 @@
        "</div>"
       ],
       "text/plain": [
-       "                   id  start_date    end_date filing_date fiscal_period  \\\n",
-       "0  0001652044:2016:FY  2016-01-01  2016-12-31  2017-02-03            FY   \n",
-       "1  0001652044:2017:FY  2017-01-01  2017-12-31  2018-02-06            FY   \n",
-       "2  0001652044:2018:FY  2018-01-01  2018-12-31  2019-02-05            FY   \n",
-       "3  0001652044:2019:FY  2019-01-01  2019-12-31  2020-02-04            FY   \n",
-       "4  0001652044:2020:FY  2020-01-01  2020-12-31  2021-02-03            FY   \n",
-       "5  0001652044:2021:FY  2021-01-01  2021-12-31  2022-02-02            FY   \n",
+       "                    start_date    end_date filing_date fiscal_period  \\\n",
+       "id                                                                     \n",
+       "0001652044:2016:FY  2016-01-01  2016-12-31  2017-02-03            FY   \n",
+       "0001652044:2017:FY  2017-01-01  2017-12-31  2018-02-06            FY   \n",
+       "0001652044:2018:FY  2018-01-01  2018-12-31  2019-02-05            FY   \n",
+       "0001652044:2019:FY  2019-01-01  2019-12-31  2020-02-04            FY   \n",
+       "0001652044:2020:FY  2020-01-01  2020-12-31  2021-02-03            FY   \n",
+       "0001652044:2021:FY  2021-01-01  2021-12-31  2022-02-02            FY   \n",
        "\n",
-       "  fiscal_year   sic        tickers   company_name  \\\n",
-       "0        2016  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
-       "1        2017  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
-       "2        2018  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
-       "3        2019  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
-       "4        2020  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
-       "5        2021  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
+       "                   fiscal_year   sic        tickers   company_name  \\\n",
+       "id                                                                   \n",
+       "0001652044:2016:FY        2016  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
+       "0001652044:2017:FY        2017  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
+       "0001652044:2018:FY        2018  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
+       "0001652044:2019:FY        2019  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
+       "0001652044:2020:FY        2020  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
+       "0001652044:2021:FY        2021  7370  [GOOG, GOOGL]  Alphabet Inc.   \n",
        "\n",
-       "                                          financials  \n",
-       "0  {'comprehensive_income': {'other_comprehensive...  \n",
-       "1  {'balance_sheet': {'current_liabilities': {'va...  \n",
-       "2  {'income_statement': {'benefits_costs_expenses...  \n",
-       "3  {'income_statement': {'participating_securitie...  \n",
-       "4  {'cash_flow_statement': {'net_cash_flow_from_o...  \n",
-       "5  {'comprehensive_income': {'comprehensive_incom...  "
+       "                                                           financials  \n",
+       "id                                                                     \n",
+       "0001652044:2016:FY  {'comprehensive_income': {'other_comprehensive...  \n",
+       "0001652044:2017:FY  {'balance_sheet': {'current_liabilities': {'va...  \n",
+       "0001652044:2018:FY  {'income_statement': {'benefits_costs_expenses...  \n",
+       "0001652044:2019:FY  {'income_statement': {'participating_securitie...  \n",
+       "0001652044:2020:FY  {'cash_flow_statement': {'net_cash_flow_from_o...  \n",
+       "0001652044:2021:FY  {'comprehensive_income': {'comprehensive_incom...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Google_Stripped = Google_DF.drop(['source_filing_url', 'source_filing_file_url', 'cik', 'timeframe'], axis = 1)\n",
+    "Google_Stripped.set_index('id', inplace = True)\n",
     "Google_Stripped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "783a4729-7784-4bd7-8f00-76bfd1d3684a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###########comprehensive_income##########\n",
+      "other_comprehensive_income_loss_attributable_to_parent\n",
+      "-528000000.0\n",
+      "comprehensive_income_loss_attributable_to_noncontrolling_interest\n",
+      "0\n",
+      "comprehensive_income_loss\n",
+      "18950000000.0\n",
+      "other_comprehensive_income_loss\n",
+      "-528000000.0\n",
+      "comprehensive_income_loss_attributable_to_parent\n",
+      "18950000000.0\n",
+      "###########income_statement##########\n",
+      "cost_of_revenue\n",
+      "35138000000.0\n",
+      "net_income_loss_attributable_to_parent\n",
+      "19478000000.0\n",
+      "gross_profit\n",
+      "55134000000.0\n",
+      "net_income_loss_available_to_common_stockholders_basic\n",
+      "19478000000.0\n",
+      "operating_income_loss\n",
+      "23716000000.0\n",
+      "income_tax_expense_benefit\n",
+      "4672000000.0\n",
+      "income_tax_expense_benefit_current\n",
+      "4792000000.0\n",
+      "income_tax_expense_benefit_deferred\n",
+      "-120000000.0\n",
+      "benefits_costs_expenses\n",
+      "66122000000.0\n",
+      "participating_securities_distributed_and_undistributed_earnings_loss_basic\n",
+      "0\n",
+      "income_loss_from_equity_method_investments\n",
+      "-202000000.0\n",
+      "income_loss_before_equity_method_investments\n",
+      "24150000000.0\n",
+      "revenues\n",
+      "90272000000.0\n",
+      "net_income_loss_attributable_to_noncontrolling_interest\n",
+      "0\n",
+      "operating_expenses\n",
+      "31418000000.0\n",
+      "preferred_stock_dividends_and_other_adjustments\n",
+      "0\n",
+      "nonoperating_income_loss\n",
+      "434000000.0\n",
+      "net_income_loss\n",
+      "19478000000.0\n",
+      "income_loss_from_continuing_operations_before_tax\n",
+      "24150000000.0\n",
+      "income_loss_from_continuing_operations_after_tax\n",
+      "19478000000.0\n",
+      "costs_and_expenses\n",
+      "66556000000.0\n",
+      "income_loss_from_discontinued_operations_net_of_tax\n",
+      "0\n",
+      "interest_expense_operating\n",
+      "124000000.0\n",
+      "###########cash_flow_statement##########\n",
+      "exchange_gains_losses\n",
+      "-170000000.0\n",
+      "net_cash_flow_from_investing_activities_continuing\n",
+      "-31165000000.0\n",
+      "net_cash_flow\n",
+      "-3631000000.0\n",
+      "net_cash_flow_from_operating_activities\n",
+      "36036000000.0\n",
+      "net_cash_flow_from_financing_activities\n",
+      "-8332000000.0\n",
+      "net_cash_flow_from_investing_activities\n",
+      "-31165000000.0\n",
+      "net_cash_flow_from_financing_activities_continuing\n",
+      "-8332000000.0\n",
+      "net_cash_flow_continuing\n",
+      "-3461000000.0\n",
+      "net_cash_flow_from_operating_activities_continuing\n",
+      "36036000000.0\n",
+      "###########balance_sheet##########\n",
+      "fixed_assets\n",
+      "34234000000.0\n",
+      "noncurrent_assets\n",
+      "62089000000.0\n",
+      "equity_attributable_to_parent\n",
+      "139036000000.0\n",
+      "current_assets\n",
+      "105408000000.0\n",
+      "noncurrent_liabilities\n",
+      "11705000000.0\n",
+      "current_liabilities\n",
+      "16756000000.0\n",
+      "other_than_fixed_noncurrent_assets\n",
+      "62089000000.0\n",
+      "liabilities_and_equity\n",
+      "167497000000.0\n",
+      "assets\n",
+      "167497000000.0\n",
+      "equity\n",
+      "139036000000.0\n",
+      "equity_attributable_to_noncontrolling_interest\n",
+      "0\n",
+      "liabilities\n",
+      "28461000000.0\n",
+      "['comprehensive_income', 'income_statement', 'cash_flow_statement', 'balance_sheet']\n"
+     ]
+    }
+   ],
+   "source": [
+    "financial_statement_list = []\n",
+    "financials_id = Google_Stripped.index[0]\n",
+    "for statement_name, statement_values in Google_Stripped['financials'][0].items():\n",
+    "    financial_statement_list.append(str(statement_name))\n",
+    "    print(f'###########{statement_name}##########')\n",
+    "    for line_item, line_value in statement_values.items():\n",
+    "        column_name = line_item\n",
+    "        for key, value in line_value.items():\n",
+    "            if key == 'value':\n",
+    "                print(line_item)\n",
+    "                print(value)\n",
+    "print(financial_statement_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6328cc61",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "dict_keys(['cost_of_revenue', 'net_income_loss_attributable_to_parent', 'gross_profit', 'net_income_loss_available_to_common_stockholders_basic', 'operating_income_loss', 'income_tax_expense_benefit', 'income_tax_expense_benefit_current', 'income_tax_expense_benefit_deferred', 'benefits_costs_expenses', 'participating_securities_distributed_and_undistributed_earnings_loss_basic', 'income_loss_from_equity_method_investments', 'income_loss_before_equity_method_investments', 'revenues', 'net_income_loss_attributable_to_noncontrolling_interest', 'operating_expenses', 'preferred_stock_dividends_and_other_adjustments', 'nonoperating_income_loss', 'net_income_loss', 'income_loss_from_continuing_operations_before_tax', 'income_loss_from_continuing_operations_after_tax', 'costs_and_expenses', 'income_loss_from_discontinued_operations_net_of_tax', 'interest_expense_operating'])"
+       "0     comprehensive_income\n",
+       "1         income_statement\n",
+       "2      cash_flow_statement\n",
+       "3            balance_sheet\n",
+       "4            balance_sheet\n",
+       "5      cash_flow_statement\n",
+       "6         income_statement\n",
+       "7     comprehensive_income\n",
+       "8         income_statement\n",
+       "9      cash_flow_statement\n",
+       "10    comprehensive_income\n",
+       "11           balance_sheet\n",
+       "12        income_statement\n",
+       "13    comprehensive_income\n",
+       "14     cash_flow_statement\n",
+       "15           balance_sheet\n",
+       "16     cash_flow_statement\n",
+       "17        income_statement\n",
+       "18           balance_sheet\n",
+       "19    comprehensive_income\n",
+       "20    comprehensive_income\n",
+       "21           balance_sheet\n",
+       "22        income_statement\n",
+       "23     cash_flow_statement\n",
+       "Name: financials, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Google_Stripped['financials'][0]['income_statement'].keys()"
+    "Google_Stripped['financials'].explode('comprehensive_income')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "cbfbcc61-b89a-40a6-a6d8-88db50663bf0",
    "metadata": {
     "tags": []
@@ -372,67 +517,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------comprehensive_income-----------\n",
-      "other_comprehensive_income_loss_attributable_to_parent\n",
-      "comprehensive_income_loss_attributable_to_noncontrolling_interest\n",
-      "comprehensive_income_loss\n",
-      "other_comprehensive_income_loss\n",
-      "comprehensive_income_loss_attributable_to_parent\n",
-      "-----------income_statement-----------\n",
-      "cost_of_revenue\n",
-      "net_income_loss_attributable_to_parent\n",
-      "gross_profit\n",
-      "net_income_loss_available_to_common_stockholders_basic\n",
-      "operating_income_loss\n",
-      "income_tax_expense_benefit\n",
-      "income_tax_expense_benefit_current\n",
-      "income_tax_expense_benefit_deferred\n",
-      "benefits_costs_expenses\n",
-      "participating_securities_distributed_and_undistributed_earnings_loss_basic\n",
-      "income_loss_from_equity_method_investments\n",
-      "income_loss_before_equity_method_investments\n",
-      "revenues\n",
-      "net_income_loss_attributable_to_noncontrolling_interest\n",
-      "operating_expenses\n",
-      "preferred_stock_dividends_and_other_adjustments\n",
-      "nonoperating_income_loss\n",
-      "net_income_loss\n",
-      "income_loss_from_continuing_operations_before_tax\n",
-      "income_loss_from_continuing_operations_after_tax\n",
-      "costs_and_expenses\n",
-      "income_loss_from_discontinued_operations_net_of_tax\n",
-      "interest_expense_operating\n",
-      "-----------cash_flow_statement-----------\n",
-      "exchange_gains_losses\n",
-      "net_cash_flow_from_investing_activities_continuing\n",
-      "net_cash_flow\n",
-      "net_cash_flow_from_operating_activities\n",
-      "net_cash_flow_from_financing_activities\n",
-      "net_cash_flow_from_investing_activities\n",
-      "net_cash_flow_from_financing_activities_continuing\n",
-      "net_cash_flow_continuing\n",
-      "net_cash_flow_from_operating_activities_continuing\n",
-      "-----------balance_sheet-----------\n",
-      "fixed_assets\n",
-      "noncurrent_assets\n",
-      "equity_attributable_to_parent\n",
-      "current_assets\n",
-      "noncurrent_liabilities\n",
-      "current_liabilities\n",
-      "other_than_fixed_noncurrent_assets\n",
-      "liabilities_and_equity\n",
-      "assets\n",
-      "equity\n",
-      "equity_attributable_to_noncontrolling_interest\n",
-      "liabilities\n"
+      "-----------value-----------\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m Google_Stripped[\u001b[39m'\u001b[39m\u001b[39mfinancials\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mcomprehensive_income\u001b[39m\u001b[39m'\u001b[39m][key]\u001b[39m.\u001b[39mitems():\n\u001b[0;32m      4\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-----------\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m-----------\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     \u001b[39mfor\u001b[39;00m dollar_value \u001b[39min\u001b[39;00m value:\n\u001b[0;32m      6\u001b[0m         \u001b[39mprint\u001b[39m(dollar_value)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not iterable"
      ]
     }
    ],
    "source": [
-    "for key, value in Google_Stripped['financials'][0].items():\n",
-    "    print(f'-----------{key}-----------')\n",
-    "    for line in value:\n",
-    "        print(line)\n"
+    "for key, value in Google_Stripped['financials'][0]['comprehensive_income'].items():\n",
+    "\n",
+    "    for key, value in Google_Stripped['financials'][0]['comprehensive_income'][key].items():\n",
+    "        print(f'-----------{key}-----------')\n",
+    "        for dollar_value in value:\n",
+    "            print(dollar_value)\n"
    ]
   },
   {
