--- a/Exploratory-Data-Analysis/Raw Json Exploration.ipynb
+++ b/Exploratory-Data-Analysis/Raw Json Exploration.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 211,
    "id": "783a4729-7784-4bd7-8f00-76bfd1d3684a",
    "metadata": {
     "tags": []
@@ -339,131 +339,185 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "###########comprehensive_income##########\n",
-      "other_comprehensive_income_loss_attributable_to_parent\n",
-      "-528000000.0\n",
-      "comprehensive_income_loss_attributable_to_noncontrolling_interest\n",
-      "0\n",
-      "comprehensive_income_loss\n",
-      "18950000000.0\n",
-      "other_comprehensive_income_loss\n",
-      "-528000000.0\n",
-      "comprehensive_income_loss_attributable_to_parent\n",
-      "18950000000.0\n",
-      "###########income_statement##########\n",
-      "cost_of_revenue\n",
-      "35138000000.0\n",
-      "net_income_loss_attributable_to_parent\n",
-      "19478000000.0\n",
-      "gross_profit\n",
-      "55134000000.0\n",
-      "net_income_loss_available_to_common_stockholders_basic\n",
-      "19478000000.0\n",
-      "operating_income_loss\n",
-      "23716000000.0\n",
-      "income_tax_expense_benefit\n",
-      "4672000000.0\n",
-      "income_tax_expense_benefit_current\n",
-      "4792000000.0\n",
-      "income_tax_expense_benefit_deferred\n",
-      "-120000000.0\n",
-      "benefits_costs_expenses\n",
-      "66122000000.0\n",
-      "participating_securities_distributed_and_undistributed_earnings_loss_basic\n",
-      "0\n",
-      "income_loss_from_equity_method_investments\n",
-      "-202000000.0\n",
-      "income_loss_before_equity_method_investments\n",
-      "24150000000.0\n",
-      "revenues\n",
-      "90272000000.0\n",
-      "net_income_loss_attributable_to_noncontrolling_interest\n",
-      "0\n",
-      "operating_expenses\n",
-      "31418000000.0\n",
-      "preferred_stock_dividends_and_other_adjustments\n",
-      "0\n",
-      "nonoperating_income_loss\n",
-      "434000000.0\n",
-      "net_income_loss\n",
-      "19478000000.0\n",
-      "income_loss_from_continuing_operations_before_tax\n",
-      "24150000000.0\n",
-      "income_loss_from_continuing_operations_after_tax\n",
-      "19478000000.0\n",
-      "costs_and_expenses\n",
-      "66556000000.0\n",
-      "income_loss_from_discontinued_operations_net_of_tax\n",
-      "0\n",
-      "interest_expense_operating\n",
-      "124000000.0\n",
-      "###########cash_flow_statement##########\n",
-      "exchange_gains_losses\n",
-      "-170000000.0\n",
-      "net_cash_flow_from_investing_activities_continuing\n",
-      "-31165000000.0\n",
-      "net_cash_flow\n",
-      "-3631000000.0\n",
-      "net_cash_flow_from_operating_activities\n",
-      "36036000000.0\n",
-      "net_cash_flow_from_financing_activities\n",
-      "-8332000000.0\n",
-      "net_cash_flow_from_investing_activities\n",
-      "-31165000000.0\n",
-      "net_cash_flow_from_financing_activities_continuing\n",
-      "-8332000000.0\n",
-      "net_cash_flow_continuing\n",
-      "-3461000000.0\n",
-      "net_cash_flow_from_operating_activities_continuing\n",
-      "36036000000.0\n",
-      "###########balance_sheet##########\n",
-      "fixed_assets\n",
-      "34234000000.0\n",
-      "noncurrent_assets\n",
-      "62089000000.0\n",
-      "equity_attributable_to_parent\n",
-      "139036000000.0\n",
-      "current_assets\n",
-      "105408000000.0\n",
-      "noncurrent_liabilities\n",
-      "11705000000.0\n",
-      "current_liabilities\n",
-      "16756000000.0\n",
-      "other_than_fixed_noncurrent_assets\n",
-      "62089000000.0\n",
-      "liabilities_and_equity\n",
-      "167497000000.0\n",
-      "assets\n",
-      "167497000000.0\n",
-      "equity\n",
-      "139036000000.0\n",
-      "equity_attributable_to_noncontrolling_interest\n",
-      "0\n",
-      "liabilities\n",
-      "28461000000.0\n",
-      "['comprehensive_income', 'income_statement', 'cash_flow_statement', 'balance_sheet']\n"
+      "                    cost_of_revenue  net_income_loss_attributable_to_parent  \\\n",
+      "0001652044:2016:FY     3.513800e+10                            1.947800e+10   \n",
+      "0001652044:2017:FY     4.558300e+10                            1.266200e+10   \n",
+      "0001652044:2018:FY     5.954900e+10                            3.073600e+10   \n",
+      "0001652044:2019:FY     7.189600e+10                            3.434300e+10   \n",
+      "0001652044:2020:FY     8.473200e+10                            4.026900e+10   \n",
+      "0001652044:2021:FY     1.109390e+11                            7.603300e+10   \n",
+      "\n",
+      "                    gross_profit  \\\n",
+      "0001652044:2016:FY  5.513400e+10   \n",
+      "0001652044:2017:FY  6.527200e+10   \n",
+      "0001652044:2018:FY  7.727000e+10   \n",
+      "0001652044:2019:FY  8.996100e+10   \n",
+      "0001652044:2020:FY  9.779500e+10   \n",
+      "0001652044:2021:FY  1.466980e+11   \n",
+      "\n",
+      "                    net_income_loss_available_to_common_stockholders_basic  \\\n",
+      "0001652044:2016:FY                                       1.947800e+10        \n",
+      "0001652044:2017:FY                                       1.266200e+10        \n",
+      "0001652044:2018:FY                                       3.073600e+10        \n",
+      "0001652044:2019:FY                                       3.434300e+10        \n",
+      "0001652044:2020:FY                                       4.026900e+10        \n",
+      "0001652044:2021:FY                                       7.603300e+10        \n",
+      "\n",
+      "                    operating_income_loss  income_tax_expense_benefit  \\\n",
+      "0001652044:2016:FY           2.371600e+10                4.672000e+09   \n",
+      "0001652044:2017:FY           2.614600e+10                1.453100e+10   \n",
+      "0001652044:2018:FY           2.632100e+10                4.177000e+09   \n",
+      "0001652044:2019:FY           3.423100e+10                5.282000e+09   \n",
+      "0001652044:2020:FY           4.122400e+10                7.813000e+09   \n",
+      "0001652044:2021:FY           7.871400e+10                1.470100e+10   \n",
+      "\n",
+      "                    income_tax_expense_benefit_current  \\\n",
+      "0001652044:2016:FY                        4.792000e+09   \n",
+      "0001652044:2017:FY                        1.435400e+10   \n",
+      "0001652044:2018:FY                        3.404000e+09   \n",
+      "0001652044:2019:FY                        5.137000e+09   \n",
+      "0001652044:2020:FY                        6.476000e+09   \n",
+      "0001652044:2021:FY                        1.281800e+10   \n",
+      "\n",
+      "                    income_tax_expense_benefit_deferred  \\\n",
+      "0001652044:2016:FY                        -1.200000e+08   \n",
+      "0001652044:2017:FY                         1.770000e+08   \n",
+      "0001652044:2018:FY                         7.730000e+08   \n",
+      "0001652044:2019:FY                         1.450000e+08   \n",
+      "0001652044:2020:FY                         1.337000e+09   \n",
+      "0001652044:2021:FY                         1.883000e+09   \n",
+      "\n",
+      "                    benefits_costs_expenses  \\\n",
+      "0001652044:2016:FY             6.612200e+10   \n",
+      "0001652044:2017:FY             8.366200e+10   \n",
+      "0001652044:2018:FY             1.019060e+11   \n",
+      "0001652044:2019:FY             1.222320e+11   \n",
+      "0001652044:2020:FY             1.344450e+11   \n",
+      "0001652044:2021:FY             1.669030e+11   \n",
+      "\n",
+      "                    participating_securities_distributed_and_undistributed_earnings_loss_basic  \\\n",
+      "0001652044:2016:FY                                                0.0                            \n",
+      "0001652044:2017:FY                                                0.0                            \n",
+      "0001652044:2018:FY                                                0.0                            \n",
+      "0001652044:2019:FY                                                0.0                            \n",
+      "0001652044:2020:FY                                                0.0                            \n",
+      "0001652044:2021:FY                                                0.0                            \n",
+      "\n",
+      "                    ...  preferred_stock_dividends_and_other_adjustments  \\\n",
+      "0001652044:2016:FY  ...                                              0.0   \n",
+      "0001652044:2017:FY  ...                                              0.0   \n",
+      "0001652044:2018:FY  ...                                              0.0   \n",
+      "0001652044:2019:FY  ...                                              0.0   \n",
+      "0001652044:2020:FY  ...                                              0.0   \n",
+      "0001652044:2021:FY  ...                                              0.0   \n",
+      "\n",
+      "                    nonoperating_income_loss  net_income_loss  \\\n",
+      "0001652044:2016:FY              4.340000e+08     1.947800e+10   \n",
+      "0001652044:2017:FY              1.047000e+09     1.266200e+10   \n",
+      "0001652044:2018:FY              8.592000e+09     3.073600e+10   \n",
+      "0001652044:2019:FY              5.394000e+09     3.434300e+10   \n",
+      "0001652044:2020:FY              6.858000e+09     4.026900e+10   \n",
+      "0001652044:2021:FY              1.202000e+10     7.603300e+10   \n",
+      "\n",
+      "                    income_loss_from_continuing_operations_before_tax  \\\n",
+      "0001652044:2016:FY                                       2.415000e+10   \n",
+      "0001652044:2017:FY                                       2.719300e+10   \n",
+      "0001652044:2018:FY                                       3.491300e+10   \n",
+      "0001652044:2019:FY                                       3.962500e+10   \n",
+      "0001652044:2020:FY                                       4.808200e+10   \n",
+      "0001652044:2021:FY                                       9.073400e+10   \n",
+      "\n",
+      "                    income_loss_from_continuing_operations_after_tax  \\\n",
+      "0001652044:2016:FY                                      1.947800e+10   \n",
+      "0001652044:2017:FY                                      1.266200e+10   \n",
+      "0001652044:2018:FY                                      3.073600e+10   \n",
+      "0001652044:2019:FY                                      3.434300e+10   \n",
+      "0001652044:2020:FY                                      4.026900e+10   \n",
+      "0001652044:2021:FY                                      7.603300e+10   \n",
+      "\n",
+      "                    costs_and_expenses  \\\n",
+      "0001652044:2016:FY        6.655600e+10   \n",
+      "0001652044:2017:FY        8.470900e+10   \n",
+      "0001652044:2018:FY        1.104980e+11   \n",
+      "0001652044:2019:FY        1.276260e+11   \n",
+      "0001652044:2020:FY        1.413030e+11   \n",
+      "0001652044:2021:FY        1.789230e+11   \n",
+      "\n",
+      "                    income_loss_from_discontinued_operations_net_of_tax  \\\n",
+      "0001652044:2016:FY                                                0.0     \n",
+      "0001652044:2017:FY                                                NaN     \n",
+      "0001652044:2018:FY                                                NaN     \n",
+      "0001652044:2019:FY                                                NaN     \n",
+      "0001652044:2020:FY                                                NaN     \n",
+      "0001652044:2021:FY                                                NaN     \n",
+      "\n",
+      "                    interest_expense_operating  diluted_earnings_per_share  \\\n",
+      "0001652044:2016:FY                 124000000.0                         NaN   \n",
+      "0001652044:2017:FY                 109000000.0                         NaN   \n",
+      "0001652044:2018:FY                 114000000.0                       43.70   \n",
+      "0001652044:2019:FY                 100000000.0                       49.16   \n",
+      "0001652044:2020:FY                 135000000.0                       58.61   \n",
+      "0001652044:2021:FY                 346000000.0                      112.20   \n",
+      "\n",
+      "                    basic_earnings_per_share  \n",
+      "0001652044:2016:FY                       NaN  \n",
+      "0001652044:2017:FY                       NaN  \n",
+      "0001652044:2018:FY                     44.22  \n",
+      "0001652044:2019:FY                     49.59  \n",
+      "0001652044:2020:FY                     59.15  \n",
+      "0001652044:2021:FY                    113.88  \n",
+      "\n",
+      "[6 rows x 25 columns]\n"
      ]
     }
    ],
    "source": [
-    "financial_statement_list = []\n",
-    "financials_id = Google_Stripped.index[0]\n",
-    "for statement_name, statement_values in Google_Stripped['financials'][0].items():\n",
-    "    financial_statement_list.append(str(statement_name))\n",
-    "    print(f'###########{statement_name}##########')\n",
-    "    for line_item, line_value in statement_values.items():\n",
-    "        column_name = line_item\n",
-    "        for key, value in line_value.items():\n",
-    "            if key == 'value':\n",
-    "                print(line_item)\n",
-    "                print(value)\n",
-    "print(financial_statement_list)"
+    "comp_columns = ['other_comprehensive_income_loss_attributable_to_parent', 'comprehensive_income_loss_attributable_to_noncontrolling_interest', 'comprehensive_income_loss', 'other_comprehensive_income_loss', 'comprehensive_income_loss_attributable_to_parent']\n",
+    "\n",
+    "comprehensive_income_df = pd.DataFrame(columns = comp_columns)\n",
+    "\n",
+    "income_statement_df = pd.DataFrame()\n",
+    "\n",
+    "cash_flow_df = pd.DataFrame()\n",
+    "\n",
+    "balance_sheet_df = pd.DataFrame() \n",
+    "\n",
+    "\n",
+    "for index, rows in Google_Stripped.iterrows():\n",
+    "    financial_statement_list = []\n",
+    "    for statement_name, statement_values in Google_Stripped['financials'][index].items():\n",
+    "        financial_dict = {}\n",
+    "        financial_data = {}\n",
+    "        financial_statement_list.append(str(statement_name))\n",
+    "        # print(f'###########{statement_name} for filing {index}##########')\n",
+    "        column_names = []\n",
+    "        for line_item, line_value in statement_values.items():\n",
+    "            column_names.append(line_item)\n",
+    "            for key, value in line_value.items():\n",
+    "                if key == 'value':\n",
+    "                    financial_data[line_item] = value\n",
+    "        statement_series = pd.Series(data = financial_data, name = index)\n",
+    "        if statement_name == 'comprehensive_income':\n",
+    "            comprehensive_income_df = pd.concat(objs = [comprehensive_income_df, statement_series.to_frame().T])\n",
+    "        \n",
+    "        elif statement_name == 'income_statement':\n",
+    "            income_statement_df = pd.concat(objs = [income_statement_df, statement_series.to_frame().T])\n",
+    "           \n",
+    "        elif statement_name == 'cash_flow_statement':\n",
+    "            cash_flow_df = pd.concat(objs = [cash_flow_df, statement_series.to_frame().T])\n",
+    "\n",
+    "        elif statement_name == 'balance_sheet':\n",
+    "            balance_sheet_df = pd.concat(objs = [balance_sheet_df, statement_series.to_frame().T])\n",
+    "\n",
+    "        else:\n",
+    "            print('Error')\n",
+    "            continue\n",
+    "print(income_statement_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6328cc61",
    "metadata": {},
    "outputs": [
     {
