Continued EDA and Data Cleaning.

--- a/Exploratory-Data-Analysis/DataFrame_Exploration.ipynb
+++ b/Exploratory-Data-Analysis/DataFrame_Exploration.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "Name: other_comprehensive_income_loss_attributable_to_noncontrolling_interest, dtype: int64"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -109,24 +109,91 @@
      "text": [
       "22978\n",
       "22810\n",
+      "Series([], Name: other_comprehensive_income_loss_attributable_to_noncontrolling_interest, dtype: int64)\n",
       "22995\n",
       "22827\n",
+      "Series([], Name: income_loss_from_discontinued_operations_net_of_tax_adjustment_to_prior_year_gain_loss_on_disposal, dtype: int64)\n",
       "22930\n",
       "22762\n",
+      "Series([], Name: net_cash_flow_from_financing_activities_discontinued, dtype: int64)\n",
       "23004\n",
       "22836\n",
+      "Series([], Name: redeemable_noncontrolling_interest_common, dtype: int64)\n",
       "23018\n",
       "22850\n",
+      "Series([], Name: source_filing_url, dtype: int64)\n",
       "2906\n",
-      "2906\n"
+      "2906\n",
+      "Series([], Name: cik, dtype: int64)\n"
      ]
     }
    ],
    "source": [
+    "importlib.reload(EDA)\n",
     "for df in full_df_list:\n",
     "    print(len(df))\n",
-    "    df = df[~df.index.duplicated(keep = 'first')]\n",
-    "    print(len(df))"
+    "    df = df.loc[~df.index.duplicated(keep = 'first')]\n",
+    "    print(len(df))\n",
+    "    print(EDA.unique_check(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                    source_filing_url                                                   \n",
+       "0000014693:2011:FY  https://api.polygon.io/v1/reference/sec/filings/0000014693-11-000044    2\n",
+       "0000014693:2012:FY  https://api.polygon.io/v1/reference/sec/filings/0001193125-12-285018    2\n",
+       "0000014693:2013:FY  https://api.polygon.io/v1/reference/sec/filings/0000014693-13-000038    2\n",
+       "0000014693:2014:FY  https://api.polygon.io/v1/reference/sec/filings/0000014693-14-000014    2\n",
+       "0000014693:2015:FY  https://api.polygon.io/v1/reference/sec/filings/0000014693-15-000014    2\n",
+       "                                                                                           ..\n",
+       "0001754301:2020:FY  https://api.polygon.io/v1/reference/sec/filings/0001564590-20-038975    2\n",
+       "0001754301:2021:FY  https://api.polygon.io/v1/reference/sec/filings/0001564590-21-043103    2\n",
+       "0001754301:2022:FY  https://api.polygon.io/v1/reference/sec/filings/0001628280-22-022584    2\n",
+       "0001805284:2020:FY  https://api.polygon.io/v1/reference/sec/filings/0001805284-21-000010    2\n",
+       "0001805284:2021:FY  https://api.polygon.io/v1/reference/sec/filings/0001805284-22-000011    2\n",
+       "Name: source_filing_url, Length: 151, dtype: int64"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(EDA)\n",
+    "EDA.unique_check(filing_information_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidIndexError",
+     "evalue": "Reindexing only valid with uniquely valued Index objects",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidIndexError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[289], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m difference_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([comprehensive_income_df, filing_information_df], axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m      2\u001b[0m difference_df\n",
+      "File \u001b[1;32my:\\Anaconda\\envs\\LHLenvironment\\Lib\\site-packages\\pandas\\util\\_decorators.py:331\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    325\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    326\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    327\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39m_format_argument_list(allow_args)),\n\u001b[0;32m    328\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    329\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m    330\u001b[0m     )\n\u001b[1;32m--> 331\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32my:\\Anaconda\\envs\\LHLenvironment\\Lib\\site-packages\\pandas\\core\\reshape\\concat.py:381\u001b[0m, in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    159\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    160\u001b[0m \u001b[39mConcatenate pandas objects along a particular axis.\u001b[39;00m\n\u001b[0;32m    161\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    366\u001b[0m \u001b[39m1   3   4\u001b[39;00m\n\u001b[0;32m    367\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    368\u001b[0m op \u001b[39m=\u001b[39m _Concatenator(\n\u001b[0;32m    369\u001b[0m     objs,\n\u001b[0;32m    370\u001b[0m     axis\u001b[39m=\u001b[39maxis,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    378\u001b[0m     sort\u001b[39m=\u001b[39msort,\n\u001b[0;32m    379\u001b[0m )\n\u001b[1;32m--> 381\u001b[0m \u001b[39mreturn\u001b[39;00m op\u001b[39m.\u001b[39mget_result()\n",
+      "File \u001b[1;32my:\\Anaconda\\envs\\LHLenvironment\\Lib\\site-packages\\pandas\\core\\reshape\\concat.py:612\u001b[0m, in \u001b[0;36m_Concatenator.get_result\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    610\u001b[0m         obj_labels \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39maxes[\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m ax]\n\u001b[0;32m    611\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m new_labels\u001b[39m.\u001b[39mequals(obj_labels):\n\u001b[1;32m--> 612\u001b[0m             indexers[ax] \u001b[39m=\u001b[39m obj_labels\u001b[39m.\u001b[39mget_indexer(new_labels)\n\u001b[0;32m    614\u001b[0m     mgrs_indexers\u001b[39m.\u001b[39mappend((obj\u001b[39m.\u001b[39m_mgr, indexers))\n\u001b[0;32m    616\u001b[0m new_data \u001b[39m=\u001b[39m concatenate_managers(\n\u001b[0;32m    617\u001b[0m     mgrs_indexers, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnew_axes, concat_axis\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbm_axis, copy\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcopy\n\u001b[0;32m    618\u001b[0m )\n",
+      "File \u001b[1;32my:\\Anaconda\\envs\\LHLenvironment\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3904\u001b[0m, in \u001b[0;36mIndex.get_indexer\u001b[1;34m(self, target, method, limit, tolerance)\u001b[0m\n\u001b[0;32m   3901\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_method(method, limit, tolerance)\n\u001b[0;32m   3903\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_index_as_unique:\n\u001b[1;32m-> 3904\u001b[0m     \u001b[39mraise\u001b[39;00m InvalidIndexError(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_requires_unique_msg)\n\u001b[0;32m   3906\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(target) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m   3907\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray([], dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mintp)\n",
+      "\u001b[1;31mInvalidIndexError\u001b[0m: Reindexing only valid with uniquely valued Index objects"
+     ]
+    }
+   ],
+   "source": [
+    "difference_df = pd.concat([comprehensive_income_df, filing_information_df], axis = 1)\n",
+    "difference_df"
    ]
   },
   {
@@ -886,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +962,7 @@
        "2009"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
